--- a/FriendRequest/index.html
+++ b/FriendRequest/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>FriendRequest</title>
   </head>
   <body>
     <div class="card">
-            <img src="profileImage.jpg" alt="">
-            <h1>John Mark</h1>
-            <h3>Strangers</h3>
-            <button id="add">Add Friend</button>
+      <img src="profileImage.jpg" alt="" />
+      <h1>John Mark</h1>
+      <h3>Strangers</h3>
+      <button id="add">Add Friend</button>
     </div>
     <script src="script.js"></script>
   </body>
